--- a/notebooks/00_env_check/00_env_check/env_check.ipynb
+++ b/notebooks/00_env_check/00_env_check/env_check.ipynb
@@ -1,23 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "af0e79c2",
-   "metadata": {},
-   "source": [
-    "## CAS Deep Learning - Computer Vision mit Deep Learning (Part 1)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "023f259e-6eb2-44ca-97eb-583122c70572",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "5343a8dc84bf3bc37afad76813040e73",
      "grade": false,
      "grade_id": "load",
      "locked": true,
@@ -34,6 +22,7 @@
     "%matplotlib inline\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
+    "\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "try:\n",
@@ -48,11 +37,7 @@
    "cell_type": "markdown",
    "id": "0e420152",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "836bdb4c6d89f68bf1439e8f54d702c8",
      "grade": false,
      "grade_id": "header",
      "locked": true,
@@ -74,11 +59,7 @@
    "cell_type": "markdown",
    "id": "8227f2c8",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "56b55b493d83054c9b22c0b1b5c75694",
      "grade": false,
      "grade_id": "cell-d36f1df224ab279c",
      "locked": true,
@@ -96,11 +77,7 @@
    "execution_count": null,
    "id": "6eb01fc4",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "11aae6ce5115cb242e25b55a81a5f798",
      "grade": false,
      "grade_id": "cell-42cfd4cc5c371de6",
      "locked": true,
@@ -126,11 +103,7 @@
    "execution_count": null,
    "id": "205687c8",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "b3dc21cac13eb79c50f8b2dc3cfe3af2",
      "grade": false,
      "grade_id": "cell-299dff08066dbe83",
      "locked": true,
@@ -152,11 +125,7 @@
    "execution_count": null,
    "id": "abb5ee2a",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "9d9658495cfef3f3aaa417961cd83cc0",
      "grade": false,
      "grade_id": "cell-5b5394d19ef57fc6",
      "locked": true,
@@ -170,18 +139,14 @@
     "if IN_COLAB:\n",
     "    import os\n",
     "\n",
-    "    os.system(\"pip install torchshow torchinfo gdown\")"
+    "    os.system(\"pip install torchshow torchinfo gdown kornia wandb pytorch_lightning\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3ec1401f",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "043a0fb2a1810018403aa4c392488525",
      "grade": false,
      "grade_id": "cell-7724562a9d60e03f",
      "locked": true,
@@ -199,11 +164,7 @@
    "execution_count": null,
    "id": "a1a4b94f",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "616597ab9882d2a9d25a6a6d432b9939",
      "grade": false,
      "grade_id": "cell-747b2a9933f70ee5",
      "locked": true,
@@ -226,11 +187,7 @@
    "cell_type": "markdown",
    "id": "6a39f0ad",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "8674f0d7e7ab6ff186f2ced208a67f24",
      "grade": false,
      "grade_id": "cell-3a483458ed52db13",
      "locked": true,
@@ -247,11 +204,7 @@
    "cell_type": "markdown",
    "id": "7132d218",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "1bfe473ec0632ed92c6724015604be9f",
      "grade": false,
      "grade_id": "cell-d2a618f47501694b",
      "locked": true,
@@ -269,11 +222,7 @@
    "execution_count": null,
    "id": "f3976723",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "11d9dbfe9b06487d256889b4f3952fa7",
      "grade": false,
      "grade_id": "cell-1ac68923d511b944",
      "locked": true,
@@ -286,29 +235,30 @@
    "source": [
     "import cv2\n",
     "import gdown\n",
-    "from matplotlib import pyplot as plt\n",
+    "import kornia\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from PIL import Image\n",
+    "import pytorch_lightning as pl\n",
     "import seaborn\n",
-    "import sklearn\n",
     "import skimage\n",
-    "from tqdm.notebook import tqdm\n",
+    "import sklearn\n",
+    "import tensorboard\n",
     "import torch\n",
     "import torchinfo\n",
+    "import torchmetrics\n",
     "import torchshow as ts\n",
-    "import torchvision"
+    "import torchvision\n",
+    "import wandb\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3fa03a29",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "c83ceeb6c2123ea4364eed6e927d5fa9",
      "grade": false,
      "grade_id": "cell-d1e6c78e31c003a2",
      "locked": true,
@@ -326,11 +276,7 @@
    "execution_count": null,
    "id": "bdd92fca",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "f555cfa6202420a4836b09ad0a725e6b",
      "grade": false,
      "grade_id": "cell-bd359a00d31b051c",
      "locked": true,
@@ -344,6 +290,7 @@
     "import io\n",
     "import os\n",
     "from pathlib import Path\n",
+    "\n",
     "import requests\n",
     "\n",
     "url = \"https://github.com/pytorch/vision/blob/main/gallery/assets/dog2.jpg?raw=true\"\n",
@@ -357,11 +304,7 @@
    "cell_type": "markdown",
    "id": "f4955de0",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "1c4b56f17f6c9b58f68eb75f6503a8d1",
      "grade": false,
      "grade_id": "cell-d572ac3a61fd74ef",
      "locked": true,
@@ -379,11 +322,7 @@
    "execution_count": null,
    "id": "599fca1c",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "891835f1a3d55b8db1b9bf5bb2945deb",
      "grade": false,
      "grade_id": "cell-32ea3ea6236685e9",
      "locked": true,
@@ -403,11 +342,7 @@
    "cell_type": "markdown",
    "id": "ad7b8e07",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "083d3b0bec84fc53d5da4425b4a43558",
      "grade": false,
      "grade_id": "cell-103eb00e7b6e75cc",
      "locked": true,
@@ -425,11 +360,7 @@
    "execution_count": null,
    "id": "7149dcb3",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "72e9cacdeb3638278786e442a739b954",
      "grade": false,
      "grade_id": "cell-feb275b6842b9b23",
      "locked": true,
@@ -450,11 +381,7 @@
    "execution_count": null,
    "id": "cc38ac3a",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "e58dd3ff557f1b700b77962121a02e8d",
      "grade": false,
      "grade_id": "cell-c8c07fe0a9fb7a0c",
      "locked": true,
@@ -474,11 +401,7 @@
    "cell_type": "markdown",
    "id": "0326a9a0",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "71e6c7c20c04fda8069036c11dabc9f3",
      "grade": false,
      "grade_id": "cell-a165f358db2e0cd5",
      "locked": true,
@@ -496,11 +419,7 @@
    "execution_count": null,
    "id": "16ce41ed",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "04226f52e65d4733b5fb9d4faeb5e426",
      "grade": false,
      "grade_id": "cell-9f442776b8eaebe3",
      "locked": true,
