update src / notebooks 00 and 02

--- a/notebooks/00_env_check/env_check.ipynb
+++ b/notebooks/00_env_check/env_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "023f259e-6eb2-44ca-97eb-583122c70572",
    "metadata": {
     "nbgrader": {
@@ -50,9 +50,11 @@
    "source": [
     "# Environment / Setup Check\n",
     "\n",
-    "Dieses Notebook dient dazu da die Environment / das Setup für die restlichen Übungen zu prüfen. Es kann innerhalb von Google Colab oder in einer eigenen Umgebung ausgeführt werden.\n",
+    "This notebook is for checking your environment setup.\n",
     "\n",
-    "Man muss das Notebook einfach laufenlassen um zu prüfen ob das Environment korrekt ist."
+    "You can execute this within Google Colab or your own environment.\n",
+    "\n",
+    "Just run the notebook to verify the environment.\n"
    ]
   },
   {
@@ -121,28 +123,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abb5ee2a",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-5b5394d19ef57fc6",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if IN_COLAB:\n",
-    "    import os\n",
-    "\n",
-    "    os.system(\"pip install torchshow torchinfo gdown kornia wandb pytorch_lightning\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3ec1401f",
    "metadata": {
@@ -156,7 +136,7 @@
     }
    },
    "source": [
-    "modifizieren Sie folgende Pfade bei Bedarf."
+    "Modify the following path to ensure data is stored at the correct location."
    ]
   },
   {
@@ -180,7 +160,43 @@
     "if IN_COLAB:\n",
     "    DATA_PATH = Path(\"/content/drive/MyDrive/cas-dl-module-compvis-part1\")\n",
     "else:\n",
-    "    DATA_PATH = Path(\"../data\")"
+    "    DATA_PATH = Path(\"../../data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54b66d2-10a2-479c-a972-b82e7aceebad",
+   "metadata": {},
+   "source": [
+    "Install `dl_cv_lectures` package with all necessary dependencies.\n",
+    "\n",
+    "This package provides the environment of the exercises-repository, as well as helper- and utils modules: [Link](https://github.com/marco-willi/cas-dl-compvis-exercises-hs2024)\n",
+    "\n",
+    "The following code installs the package from a local repository (if available), otherwise it installs it from the exercise repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6356645c-c792-4139-b069-021f86897c98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import dl_cv_lectures\n",
+    "\n",
+    "    print(\"dl_cv_lectures installed, all good\")\n",
+    "except ImportError as e:\n",
+    "    import os\n",
+    "\n",
+    "    if Path(\"/workspace/code/src\").exists():\n",
+    "        print(\"Installing from local repo\")\n",
+    "        os.system(\"cd /workspace/code  && pip install .\")\n",
+    "    else:\n",
+    "        print(\"Installing from git repo\")\n",
+    "        os.system(\n",
+    "            \"pip install git+https://github.com/marco-willi/cas-dl-compvis-exercises-hs2024\"\n",
+    "        )"
    ]
   },
   {
@@ -214,7 +230,7 @@
     }
    },
    "source": [
-    "Hier werden alle benötigten (third-party) Libraries geladen. Diese sollten installiert sein."
+    "We load all necessary packages."
    ]
   },
   {
@@ -233,12 +249,25 @@
    },
    "outputs": [],
    "source": [
+    "# Base packages\n",
+    "import io\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "from pathlib import Path\n",
+    "from typing import Callable\n",
+    "\n",
+    "# third party packages\n",
+    "import captum\n",
     "import cv2\n",
     "import gdown\n",
     "import kornia\n",
+    "import lightning as L\n",
+    "import mlxtend\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pytorch_lightning as pl\n",
+    "import ray\n",
+    "import requests\n",
     "import seaborn\n",
     "import skimage\n",
     "import sklearn\n",
@@ -248,10 +277,14 @@
     "import torchmetrics\n",
     "import torchshow as ts\n",
     "import torchvision\n",
+    "import transformers\n",
     "import wandb\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "# local / course package\n",
+    "import dl_cv_lectures"
    ]
   },
   {
@@ -268,7 +301,11 @@
     }
    },
    "source": [
-    "Für die Tests laden wir noch Python-Basismodule."
+    "## Test Some Operations\n",
+    "\n",
+    "Now we simply apply some of the packages that we imported.\n",
+    "\n",
+    "We also test data storage on your drive."
    ]
   },
   {
@@ -287,16 +324,9 @@
    },
    "outputs": [],
    "source": [
-    "import io\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import requests\n",
-    "\n",
     "url = \"https://github.com/pytorch/vision/blob/main/gallery/assets/dog2.jpg?raw=true\"\n",
     "r = requests.get(url, allow_redirects=True)\n",
     "image = Image.open(io.BytesIO(r.content))\n",
-    "\n",
     "image"
    ]
   },
@@ -314,7 +344,7 @@
     }
    },
    "source": [
-    "Nun speichern wir das Bild in unserem DATA_PATH ab."
+    "Now we save the image in `DATA_PATH`."
    ]
   },
   {
@@ -352,7 +382,7 @@
     }
    },
    "source": [
-    "Nun lesen wir das Bild wieder ein und stellen es dar."
+    "Now we load the image and display it."
    ]
   },
   {
@@ -411,7 +441,9 @@
     }
    },
    "source": [
-    "# PyTorch Device Test"
+    "# PyTorch Device Test\n",
+    "\n",
+    "Simple test. Depending on your hardware and/or the instance that you are using it should be GPU or CPU."
    ]
   },
   {
