--- a/notebooks/00_env_check/env_check.ipynb
+++ b/notebooks/00_env_check/env_check.ipynb
@@ -194,9 +194,7 @@
     "        os.system(\"cd /workspace/code  && pip install .\")\n",
     "    else:\n",
     "        print(\"Installing from git repo\")\n",
-    "        os.system(\n",
-    "            \"pip install git+https://github.com/marco-willi/cas-dl-compvis-exercises-hs2024\"\n",
-    "        )"
+    "        os.system(\"pip install git+https://github.com/marco-willi/cas-dl-compvis-exercises-hs2024\")"
    ]
   },
   {
@@ -258,10 +256,7 @@
     "from typing import Callable\n",
     "\n",
     "# third party packages\n",
-    "import captum\n",
-    "import cv2\n",
     "import gdown\n",
-    "import kornia\n",
     "import lightning as L\n",
     "import mlxtend\n",
     "import numpy as np\n",
@@ -269,7 +264,6 @@
     "import ray\n",
     "import requests\n",
     "import seaborn\n",
-    "import skimage\n",
     "import sklearn\n",
     "import tensorboard\n",
     "import torch\n",
